--- a/src/translations/zh-hant.json
+++ b/src/translations/zh-hant.json
@@ -1,5 +1,16 @@
 {
-    "beforesign": "undefined beforeSign hook called from plugin template",
-    "aftersign": "undefined afterSign hook called from plugin template",
-    "afterbroadcast": "undefined afterBroadcast hook called from plugin template"
+    "prompt": {
+        "title": "啟用自動簽名？",
+        "body": "您是否要為 {{contract}} 上的以下操作啟用自動簽名？\n\n操作：{{actions}}\n\n這將在您的帳戶上創建一個只能執行這些特定操作的新權限。",
+        "enable": "啟用自動簽名",
+        "skip": "這次手動簽名"
+    },
+    "signed": {
+        "title": "已自動簽名",
+        "body": "交易已使用您的本地密鑰自動簽名。"
+    },
+    "error": {
+        "no_storage": "本地簽名需要存儲才能工作。",
+        "no_ui": "本地簽名的初始設置需要 UI。"
+    }
 }
